# football_game

./: CMakeLists.txt  conanfile.py  main.cpp  requirements.txt
include/football_game/: agent.hpp  helpers.hpp  pitch.hpp  pitch_controller.hpp  renderer.hpp
src/: agent.cpp  pitch_controller.cpp  renderer.cpp
